added basic html reset and utility classes

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Our Hours</title>
+        <title>About</title>
         <meta charset="UTF-8">
-        <meta name="owner" content="Esi Meci">
-        <meta name="description" content="Little Esi😋 Shop">
+        <meta name="owner" content="Esi-Meci">
+        <meta name="description" content=" about Esi😋 Shop">
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="shortcut icon" href="img/favico..jpg" type="jpg">
         <link rel="stylesheet" href="css/style.css">
@@ -14,39 +14,19 @@
             <h1 class="header__h1"> Little Esi😋 Shop</h1>
             <nav class="header__nav">
                 <ul class="header__ul">
-                    <li><a href="/" title="about">Home</a></li>
+                    <li><a href="index.html" title="about">Home</a></li>
                     <li><a href="/#menu" title="menu">Menu</a></li>
+                    <li><a href="hours.html" title="hours">Hours</a></li>
                     <li><a href="contact.html" title="contact">Contact</a></li>
-                    <li><a href="about.html" title="hours">About</a></li>
                 </ul>
             </nav>
         </header> 
         <section class="hero">
             <figure> 
-                <img src="img/tacos_tray_1000x667.png" alt="delicioso" title="delicioso!" width="1000px" height="667px">
+                <img src="img/tacos_delicioso_1000x667.png" alt="delicioso" title="delicioso!" width="1000px" height="667px">
                 <figcaption class="offscreen">Esi😋Try these delicious Tacos</figcaption>
             </figure>
         </section>
-        <main>
-           <dl>
-            <p>We are Open 7 Days A week!</p>
-            <dt>Sunday-Thursday</dt>
-            <dd>11am-9pm</dd>
-            <dt>Friday-Saturday</dt>
-            <dd>11am-11pm</dd>
-           </dl> 
-        </main><br>
-        <footer>
-            <a href="#">Back on Top</a> 
-            <hr>
-            <p>Copyright &copy; The Little Esi😋 Shop</p>
-            </footer>
+    
     </body>
 </html>
-
-
-
-
-
-
-
