--- a/contact.html
+++ b/contact.html
@@ -2,27 +2,31 @@
 <html>
     <head>
         <title>Contact Us</title>
-        <meta name="owner" content="Rishabh">
-        <meta name="description" content="Little Jalebi Shop">
+        <meta charset="UTF-8">
+        <meta name="owner" content="Esi Meci">
+        <meta name="description" content="Little Esi😋 Shop">
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="shortcut icon" href="img/favico..jpg" type="jpg">
         <link rel="stylesheet" href="css/style.css">
     </head>
       <body>
-        <header>
-            <h1>Little Jalebi Shop Hours</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About LJS</a></li>
-                    <li><a href="index.html#menu">Our Menu</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+        <header class="header">
+            <h1 class="header__h1"> Little Esi😋 Shop</h1>
+            <nav class="header__nav">
+                <ul class="header__ul">
+                    <li><a href="/" title="about">Home</a></li>
+                    <li><a href="/#menu" title="menu">Menu</a></li>
+                    <li><a href="hours.html" title="hours">Hours</a></li>
+                    <li><a href="about.html" title="hours">About</a></li>
                 </ul>
             </nav>
-            <figure><img src="img/tacos_close_up_400x260.png" alt="jalebi" width="400px" height="260px">
-            <figcaption>jalebi</figcaption>
+        </header> 
+        <section class="hero">
+            <figure> 
+                <img src="img/tacos_close_up_1000x649.png" alt="delicioso" title="delicioso!" width="1000px" height="667px">
+                <figcaption class="offscreen">Esi😋Try these delicious Tacos</figcaption>
             </figure>
-        </header>
+        </section>
         <main>
             <section>
                 <h2>Our Contact Form</h2>
@@ -45,7 +49,7 @@
         <footer>
         <a href="#">Back on Top</a> 
         <hr>
-        <p>Copyright &copy; The Little Jalebi Shop</p>
+        <p>Copyright &copy; The Little Esi😋 Shop</p>
         </footer>
     </body>
 </html>
