--- a/index.html
+++ b/index.html
@@ -2,40 +2,42 @@
 <html>
     <head>
         <title>Home</title>
-        <meta name="owner" content="Rishabh">
-        <meta name="description" content="Little Jalebi Shop">
+        <meta charset="UTF-8">
+        <meta name="owner" content="Esi-Meci">
+        <meta name="description" content="Little Esi😋 Shop">
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="shortcut icon" href="img/favico..jpg" type="jpg">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <h1>Welcome To The Little Jalebi Shop</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about" title="about">About LJS</a></li>
-                    <li><a href="#menu" title="menu">Our Menu</a></li>
-                    <li><a href="hours.html" title="hours">Store Hours</a></li>
-                    <li><a href="contact.html" title="contact">Contact Us</a></li>
+        <header class="header">
+            <h1 class="header__h1">Welcome To The Little Esi😋 Shop</h1>
+            <nav class="header__nav">
+                <ul class="header__ul">
+                    <li><a href="#menu" title="menu">Menu</a></li>
+                    <li><a href="hours.html" title="hours">Hours</a></li>
+                    <li><a href="contact.html" title="contact">Contact</a></li>
+                    <li><a href="about.html" title="about">About <abbr title="The Little Taco Shop">LTS</abbr></a></li>
                 </ul>
             </nav>
-           <figure> <img src="img/tacos_and_drink_400x267.png" alt="jalebi" width="400px" height="267px">
-            <figcaption>jalebi</figcaption>
+        </header> 
+        <section class="hero">
+            <h2 class="hero__h2">Welcome</h2>
+            <figure> 
+                <img src="img/tacos_and_drink_1000x667.png" alt="Esi😋" width="1000px" height="667px">
+                <figcaption class="offscreen">Esi😋</figcaption>
             </figure>
-        </header>        
-        <hr>
+        </section>
         <main>
             <h2 id="about">About LJS</h2>
-            <p>LJS Was Founded in 2022, Our shop was build from <strong>Love of Jalebi😋</strong>
+            <p>LJS Was Founded in 2022, Our shop was build from <strong>Love of Esi😋😋</strong>
                 We hope our Shop adds a unique and interesting place to our little town.
             </p>
-            <h3>Jalebi Trivia</h3>
+            <h3>Esi😋 Trivia</h3>
             <details>
-                <summary>
-                    Why Jalebi is most loved in India?
-                </summary>
+                <summary>Why Esi😋 is most loved in India?</summary>
                 Nothing can beat for india's love for sweet and the
-                crisp, golden twirl called the jalebi is proof! it is
+                crisp, golden twirl called the Esi😋 is proof! it is
                 devoured as Breakfast in some parts of India and as
                 Dessert in most, and also used in every festivals in
                 in india.
@@ -43,19 +45,17 @@
             <hr>
             <h2 id="menu">Our Menu</h2> 
             <table>
-                <caption>Our Jalebi</caption>
+                <caption>Our Esi😋</caption>
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th scope="col 
-                        " abbr="Quantity">Qty</th>
-                        <th scope="col
-                        ">Price</th>
+                        <th scope="col" abbr="Quantity">Qty</th>
+                        <th scope="col">Price</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th rowspan="3" scope="row">Only jalebi</th>
+                        <th rowspan="3" scope="row">Only Esi😋</th>
                         <td>100gm</td>
                         <td>₹40.00</td>
                     </tr>
@@ -68,7 +68,7 @@
                         <td>₹400.00</td>
                     </tr>
                     <tr>
-                        <th rowspan="3" scope="row">Jalebi with<br>Dahi</th>
+                        <th rowspan="3" scope="row">Esi😋 with<br>Dahi</th>
                         <td>100gm</td>
                         <td>₹50.00</td>
                     </tr>
@@ -92,7 +92,7 @@
         <footer>
         <p><a href="#">Back on Top</a></p>
         <hr>
-        <p>Copyright &copy; The Little Jalebi Shop</p>
+        <p>Copyright &copy; The Little Esi😋 Shop</p>
         </footer>
     </body>
 </html>
