--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <nav class="header__nav">
                 <ul class="header__ul">
                     <li><a href="index.html" title="about">Home</a></li>
-                    <li><a href="/#menu" title="menu">Menu</a></li>
+                    <li><a href="index.html/#menu" title="menu">Menu</a></li>
                     <li><a href="hours.html" title="hours">Hours</a></li>
                     <li><a href="contact.html" title="contact">Contact</a></li>
                 </ul>
