--- a/hours.html
+++ b/hours.html
@@ -14,8 +14,8 @@
             <h1 class="header__h1"> Little Esi😋 Shop</h1>
             <nav class="header__nav">
                 <ul class="header__ul">
-                    <li><a href="/" title="about">Home</a></li>
-                    <li><a href="/#menu" title="menu">Menu</a></li>
+                    <li><a href="index.html" title="about">Home</a></li>
+                    <li><a href="index.html/#menu" title="menu">Menu</a></li>
                     <li><a href="contact.html" title="contact">Contact</a></li>
                     <li><a href="about.html" title="hours">About</a></li>
                 </ul>
