--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </figure>
         </section>
         <main>
-            <h2 id="about">About LJS</h2>
+            <h2 id="about">About LTS</h2>
             <p>LJS Was Founded in 2022, Our shop was build from <strong>Love of Esi😋😋</strong>
                 We hope our Shop adds a unique and interesting place to our little town.
             </p>
