editing  the html file properly

--- a/contact.html
+++ b/contact.html
@@ -45,11 +45,13 @@
                 <address>555 Chowk, Charak Chauraha,<br>Lucknow, Uttar Pradesh <br>India, 226202</address> 
                 <p>phone: <a href="tel:+915454565456">5454565456</a></p> 
             </section>
-        </main><br>
-        <footer>
-        <a href="#">Back on Top</a> 
+        </main>
         <hr>
-        <p>Copyright &copy; The Little Esi😋 Shop</p>
+        <footer class="footer">   
+            <p> 
+                <span class="nowrap"> Copyright &copy;</span> 
+                <span class="nowrap">Esi😋 Shop</span>
+            </p>
         </footer>
     </body>
 </html>
