--- a/hours.html
+++ b/hours.html
@@ -27,20 +27,27 @@
                 <figcaption class="offscreen">Esi😋Try these delicious Tacos</figcaption>
             </figure>
         </section>
-        <main>
-           <dl>
-            <p>We are Open 7 Days A week!</p>
-            <dt>Sunday-Thursday</dt>
-            <dd>11am-9pm</dd>
-            <dt>Friday-Saturday</dt>
-            <dd>11am-11pm</dd>
-           </dl> 
-        </main><br>
-        <footer>
-            <a href="#">Back on Top</a> 
-            <hr>
-            <p>Copyright &copy; The Little Esi😋 Shop</p>
-            </footer>
+        <main class="main">
+            <article class="main_article">
+                <p>We are Open 7 Days A week!</p>
+                <dl>                
+                    <dt>Sunday-Thursday</dt>
+                    <dd>11am-9pm</dd>
+                    <dt>Friday-Saturday</dt>
+                    <dd>11am-11pm</dd>
+                </dl> 
+                <p>
+                    <a href="#">Back on Top</a>
+                </p>
+            </article>
+       </main>
+       <hr>
+       <footer class="footer">   
+           <p> 
+               <span class="nowrap"> Copyright &copy;</span> 
+               <span class="nowrap">Esi😋 Shop</span>
+           </p>
+       </footer>
     </body>
 </html>
 
