--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class="header">
-            <h1 class="header__h1">Welcome To The Little Esi😋 Shop</h1>
+            <h1 class="header__h1">Little Esi😋 Shop</h1>
             <nav class="header__nav">
                 <ul class="header__ul">
                     <li><a href="#menu" title="menu">Menu</a></li>
@@ -22,77 +22,68 @@
             </nav>
         </header> 
         <section class="hero">
-            <h2 class="hero__h2">Welcome</h2>
+            <h2 class="hero__h2">Welcome!</h2>
             <figure> 
                 <img src="img/tacos_and_drink_1000x667.png" alt="Esi😋" width="1000px" height="667px">
                 <figcaption class="offscreen">Esi😋</figcaption>
             </figure>
         </section>
-        <main>
-            <h2 id="about">About LTS</h2>
-            <p>LJS Was Founded in 2022, Our shop was build from <strong>Love of Esi😋😋</strong>
-                We hope our Shop adds a unique and interesting place to our little town.
-            </p>
-            <h3>Esi😋 Trivia</h3>
-            <details>
-                <summary>Why Esi😋 is most loved in India?</summary>
-                Nothing can beat for india's love for sweet and the
-                crisp, golden twirl called the Esi😋 is proof! it is
-                devoured as Breakfast in some parts of India and as
-                Dessert in most, and also used in every festivals in
-                in india.
-            </details>
-            <hr>
-            <h2 id="menu">Our Menu</h2> 
-            <table>
-                <caption>Our Esi😋</caption>
-                <thead>
-                    <tr>
-                        <th>&nbsp;</th>
-                        <th scope="col" abbr="Quantity">Qty</th>
-                        <th scope="col">Price</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" scope="row">Only Esi😋</th>
-                        <td>100gm</td>
-                        <td>₹40.00</td>
-                    </tr>
-                    <tr>
-                        <td>250gm</td>
-                        <td>₹100.00</td>
-                    </tr>
-                    <tr>
-                        <td>1 kg</td>
-                        <td>₹400.00</td>
-                    </tr>
-                    <tr>
-                        <th rowspan="3" scope="row">Esi😋 with<br>Dahi</th>
-                        <td>100gm</td>
-                        <td>₹50.00</td>
-                    </tr>
-                    <tr>
-                        <td>250gm</td>
-                        <td>₹125.00</td>
-                    </tr>
-                    <tr>
-                        <td>1 kg</td>
-                        <td>₹500.00</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="3">Samosa with Chatni for just ₹10.00</td>
-                    </tr>
-                </tfoot>
-    
-            </table>
-        </main><br>
-        <footer>
-        <p><a href="#">Back on Top</a></p>
+        <main class="main">
+            <article id="menu" class="main__article">
+                <h2 id="menu">Our Menu</h2> 
+                <table>
+                    <caption>Our Esi😋</caption>
+                    <thead>
+                        <tr>
+                            <th>&nbsp;</th>
+                            <th scope="col" abbr="Quantity">Qty</th>
+                            <th scope="col">Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th rowspan="3" scope="row">Crunchy</th>
+                            <td>100gm</td>
+                            <td>₹40.00</td>
+                        </tr>
+                        <tr>
+                            <td>250gm</td>
+                            <td>₹100.00</td>
+                        </tr>
+                        <tr>
+                            <td>1 kg</td>
+                            <td>₹400.00</td>
+                        </tr>
+                        <tr>
+                            <th rowspan="3" scope="row">Esi😋 with<br>Dahi</th>
+                            <td>100gm</td>
+                            <td>₹50.00</td>
+                        </tr>
+                        <tr>
+                            <td>250gm</td>
+                            <td>₹125.00</td>
+                        </tr>
+                        <tr>
+                            <td>1 kg</td>
+                            <td>₹500.00</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">Chips &amp; Salsa</td>
+                        </tr>
+                    </tfoot>                   
+                </table>
+            </article>
+            <br>
+            <p><a href="#">Back on Top</a></p>
+        </main>
         <hr>
-        <p>Copyright &copy; The Little Esi😋 Shop</p>
+        <footer class="footer">   
+            <p> 
+                <span class="nowrap"> Copyright &copy;</span> 
+                <span class="nowrap">Esi😋 Shop</span>
+            </p>
         </footer>
     </body>
 </html>
