adding  more css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>The Little Esi Shop </title>
         <meta charset="UTF-8">
         <meta name="owner" content="Esi-Meci">
         <meta name="description" content="Little Esi😋 Shop">
