--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Contact Us</title>
+        <title>Contact LES</title>
         <meta charset="UTF-8">
         <meta name="owner" content="Esi Meci">
         <meta name="description" content="Little Esi😋 Shop">
@@ -27,24 +27,26 @@
                 <figcaption class="offscreen">Esi😋Try these delicious Tacos</figcaption>
             </figure>
         </section>
-        <main>
-            <section>
-                <h2>Our Contact Form</h2>
-                <form action="get" method="get">
-                    <fieldset>
-                        <legend>Send Us a Message</legend>
-                        <p><label>Name: <input type="text" name="name" id="" placeholder="your name"></label></p><br>
-                        <p><label for="email">Email: </label><input type="email" name="email" id="email" placeholder="your email "
-                            autocomplete="off"></p><br>
-                        <p><label for="message">Your Message:</label><br><textarea name="message" id="message" cols="30" rows="10" placeholder="send us your thoughts"></textarea></p>
-                    </fieldset>
-                    <input type="submit" name="Submit">
-                <input type="reset" name="reset" id="">
-                </form>    
+        <main class="main">
+            <article class="main__article"> 
                 <h2>Our Location</h2>
                 <address>555 Chowk, Charak Chauraha,<br>Lucknow, Uttar Pradesh <br>India, 226202</address> 
                 <p>phone: <a href="tel:+915454565456">5454565456</a></p> 
-            </section>
+            </article>
+            <article class="main__article contact">
+                <h2  class="contact__h2">Our Contact Form</h2>
+                <form action="get" method="get" class="contact__form">
+                    <fieldset class="contact__filedset">
+                        <legend class="offscreen">Send Us a Message</legend>
+                        <p  class="contact__p"><label  class="contact__label" for="name">Name:</label> <input  class="contact__input" type="text" name="name" id="name" placeholder="your name"></label></p><br>
+                        <p  class="contact__p"><label  class="contact__label" for="email">Email: </label><input  class="contact__input" type="email" name="email" id="email" placeholder="your email "
+                            autocomplete="off"></p><br>
+                        <p  class="contact__p"><label  class="contact__label" for="message">Your Message:</label><br><textarea  class="contact__textarea" name="message" id="message" cols="30" rows="10" placeholder="send us your thoughts"></textarea></p>
+                    </fieldset>
+                    <button  class="contact__button">Submit</button>
+                    <button  class="contact__button">Reset</button>
+                </form>  
+            </article>             
         </main>
         <hr>
         <footer class="footer">   
