--- a/hours.html
+++ b/hours.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Our Hours</title>
+        <title>LES Hours</title>
         <meta charset="UTF-8">
         <meta name="owner" content="Esi Meci">
         <meta name="description" content="Little Esi😋 Shop">
@@ -28,7 +28,7 @@
             </figure>
         </section>
         <main class="main">
-            <article class="main_article">
+            <article class="main__article">
                 <p>We are Open 7 Days A week!</p>
                 <dl>                
                     <dt>Sunday-Thursday</dt>
