added litle minimal media quaries including dark mode

--- a/hours.html
+++ b/hours.html
@@ -8,10 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="shortcut icon" href="img/favico..jpg" type="jpg">
         <link rel="stylesheet" href="css/style.css">
+        <script src="js/main.js" defer></script>
     </head>
     <body>
         <header class="header">
-            <h1 class="header__h1"> Little Esi😋 Shop</h1>
+            <h1 class="header__h1"> Little Esi Shop</h1>
             <nav class="header__nav">
                 <ul class="header__ul">
                     <li><a href="index.html" title="about">Home</a></li>
@@ -29,6 +30,7 @@
         </section>
         <main class="main">
             <article class="main__article">
+                <h2>Hours</h2>
                 <p>We are Open 7 Days A week!</p>
                 <dl>                
                     <dt>Sunday-Thursday</dt>
@@ -36,15 +38,11 @@
                     <dt>Friday-Saturday</dt>
                     <dd>11am-11pm</dd>
                 </dl> 
-                <p>
-                    <a href="#">Back on Top</a>
-                </p>
             </article>
        </main>
-       <hr>
        <footer class="footer">   
            <p> 
-               <span class="nowrap"> Copyright &copy;</span> 
+               <span class="nowrap"> Copyright &copy; <time id="year"></time></span> 
                <span class="nowrap">Esi😋 Shop</span>
            </p>
        </footer>
