--- a/about.html
+++ b/about.html
@@ -8,10 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="shortcut icon" href="img/favico..jpg" type="jpg">
         <link rel="stylesheet" href="css/style.css">
+        <script src="js/main.js" defer></script>
     </head>
     <body>
         <header class="header">
-            <h1 class="header__h1"> Little Esi😋 Shop</h1>
+            <h1 class="header__h1"> Little Esi Shop</h1>
             <nav class="header__nav">
                 <ul class="header__ul">
                     <li><a href="index.html" title="about">Home</a></li>
@@ -52,7 +53,7 @@
         </main>
         <footer class="footer">   
             <p> 
-                <span class="nowrap"> Copyright &copy;</span> 
+                <span class="nowrap"> Copyright &copy; <time id="year"></time></span> 
                 <span class="nowrap">Esi😋 Shop</span>
             </p>
         </footer>
